[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/backgrounds/BK.png" type="Texture" id=1]
[ext_resource path="res://assets/title_screen/bee_a_hero2.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/menu/cross.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/larger.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/heavy_machinegun.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/title_screen/bee_a_hero1.png" type="Texture" id=9]
[ext_resource path="res://assets/title_screen/bee_a_hero3.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/PressStart.ttf" type="DynamicFontData" id=11]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="Animation" id=12]
resource_name = "Nouvelle animation"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 613, 250 ), Vector2( 613, 211 ), Vector2( 613, 250 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 613, 211 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Overlay:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.486275, 0.486275, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 384, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Overlay:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.486275, 0.486275, 0 ), Color( 0.486275, 0.486275, 0.486275, 0.705882 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Unslide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Overlay:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.486275, 0.486275, 0.705882 ), Color( 0.486275, 0.486275, 0.486275, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 613, 211 )
scale = Vector2( 4, 4 )
frames = SubResource( 11 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
autoplay = "Nouvelle animation"
"anims/Nouvelle animation" = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="Authors" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -616.0
margin_top = -38.0
margin_right = 616.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 2 )
text = "2021 © Alexandre, Titouan, Dylan, Romain, Cindy, Mathieu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -246.0
margin_top = -166.0
margin_right = 246.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 3 )
text = "JOUER"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -134.0
margin_right = 284.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 4 )
text = "OPTIONS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -289.0
margin_top = -134.0
margin_right = -53.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 4 )
text = "QUITTER"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.486275, 0.486275, 0.486275, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
margin_left = -384.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="OptionsMenu"]
margin_left = -384.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "Paramètres"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenButton" type="Button" parent="OptionsMenu"]
margin_left = -280.0
margin_top = 128.0
margin_right = -4.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 10 )
text = "Plein écran"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenIcon" type="TextureButton" parent="OptionsMenu"]
margin_left = -384.0
margin_top = 88.0
margin_right = -284.0
margin_bottom = 188.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KitchenGunButton" type="Button" parent="OptionsMenu"]
margin_left = -328.0
margin_top = 224.0
margin_right = -52.0
margin_bottom = 268.0
custom_colors/font_color_pressed = Color( 0.431373, 1, 0, 1 )
custom_fonts/font = SubResource( 10 )
toggle_mode = true
text = "KITCHEN GUN"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseMenuButton" type="TextureButton" parent="OptionsMenu"]
margin_left = -384.0
margin_top = 624.0
margin_right = -284.0
margin_bottom = 724.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptionsMenu"]
anims/RESET = SubResource( 7 )
anims/Slide = SubResource( 8 )
anims/Unslide = SubResource( 9 )

[node name="HeavyMachinegun" type="AudioStreamPlayer" parent="OptionsMenu"]
stream = ExtResource( 8 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="OptionsMenu/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="OptionsMenu/FullScreenIcon" to="." method="_on_FullScreenButton_pressed"]
[connection signal="toggled" from="OptionsMenu/KitchenGunButton" to="." method="_on_KitchenGunButton_toggled"]
[connection signal="pressed" from="OptionsMenu/CloseMenuButton" to="." method="_on_CloseMenuButton_pressed"]
[connection signal="animation_finished" from="OptionsMenu/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
